# spacefit-platform

./: .gitignore  CLAUDE.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  CONNECTOR_DEVELOPER_GUIDE.md  CONNECTOR_PLATFORM_DESIGN.md  Dockerfile  LLM.md  feature-request-pdf-void-analysis.md  pyproject.toml  spacefit.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_deals_and_documents.py  003_add_browser_session_tracking.py  004_add_outreach_tables.py  005_add_subscription_tables.py  006_add_document_session_integration.py  007_add_analysis_type_to_chat_sessions.py  008_add_system_prompt_id_to_chat_sessions.py  009_add_connector_health_fields.py  011_add_token_usage_and_budget.py  012_add_email_tokens.py  013_add_is_admin_to_users.py  014_add_user_memory.py  015_qualification_funnel.py  016_add_campaign_attachments.py  017_add_visible_to_chat_messages.py  018_add_shared_reports_table.py  019_add_tenant_feedback_table.py  020_add_projects_table.py  021_add_user_ai_config.py  024_add_import_jobs.py  (+9 more)
backend/app/: main.py
backend/browser_sessions/: 18cb1c2f8e3c4db0_placer.json  18cb1c2f8e3c4db0_siteusa.json  placer_session.json
backend/scripts/: __init__.py  byok_verify.py  debug_siteusa_login.py  migrate_documents_to_projects.py  seed_admin.py  seed_demo.py  test_siteusa_login.py  test_void_chaining.py
backend/tests/: test_ai_config.py  test_api_connectors.py  test_byok_crypto.py  test_byok_errors.py  test_byok_gateway.py  test_byok_secret_leak.py  test_connector_health.py  test_demographics.py  test_import_parsers.py  test_location_resolver.py  test_memory_scope.py
(+313 files in other folders)
